--- a/frontend/src/styles/_profile.scss
+++ b/frontend/src/styles/_profile.scss
@@ -2,4 +2,7 @@
   display: none
 }
 
-
+#root > main > div.MuiContainer-root.MuiContainer-maxWidthSm > span.MuiBox-root.MuiBox-root-10.profile-info > div > button > div {
+  height: 100px;
+  width: 100px;
+}
