--- a/frontend/src/styles/_lightbox.scss
+++ b/frontend/src/styles/_lightbox.scss
@@ -1,3 +1,3 @@
-#root > main > div.box > div > div > div > div.MuiGrid-root.MuiGrid-container.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-true > div > div > a > p {
+#root > main > div.box > div > div > div > div.MuiGrid-root.MuiGrid-container.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-true > div > div > a > div > p {
   color: #bdbdbd;
 }
