--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -6,8 +6,14 @@ main {
   font-family: $font-family;
 }
 
+body {
+  font-family: 'Libre Baskerville', serif;
+}
+
 @import './register';
 @import './mapPopUp';
 @import './profile';
 @import './login';
 @import './lightbox';
+@import './navbar';
+@import './intro';
