fixed profile styling but buggy

--- a/frontend/src/styles/_navbar.scss
+++ b/frontend/src/styles/_navbar.scss
@@ -12,3 +12,7 @@ p, a, #primary-search-account-menu > div.MuiPaper-root.MuiMenu-paper.MuiPopover-
 #root > main > div.makeStyles-grow-1 > header > div > h6 {
   font-size: 20px;
 }
+
+#root > main > div.makeStyles-grow-1 > header > div > h6 > a {
+  font-size: 25px;
+}
