--- a/frontend/src/styles/_profile.scss
+++ b/frontend/src/styles/_profile.scss
@@ -40,4 +40,5 @@
 
 #root > main > div.MuiContainer-root.MuiContainer-maxWidthMd > span.MuiBox-root.MuiBox-root-10.profile-info > div > div.MuiGrid-root.MuiGrid-container.MuiGrid-item.MuiGrid-grid-md-true > div > p:nth-child(1) {
   font-size: 28px;
+  font-family: 'Libre Baskerville', serif;
 }
