--- a/frontend/src/styles/_register.scss
+++ b/frontend/src/styles/_register.scss
@@ -1,10 +1,9 @@
+$font-family: 'Libre Baskerville', serif;
+
 #root > main > div.makeStyles-root-1 > div > form > div:nth-child(1) {
   align-items: center;
 }
 
-body {
-  font-family: 'Libre Baskerville', serif;
+#root > main > main > div > div > h1, #root > main > main > div > div > form > button > span.MuiButton-label {
+  font-family: $font-family;
 }
-
-
-
