--- a/frontend/src/styles/_login.scss
+++ b/frontend/src/styles/_login.scss
@@ -27,3 +27,7 @@ $font-family: 'Libre Baskerville', serif;
   font-size: 14px;
   color: #575757;
 }
+
+#root > main > main > div > form > button > span.MuiButton-label{
+  font-family: $font-family;
+}
