--- a/frontend/src/styles/_profile.scss
+++ b/frontend/src/styles/_profile.scss
@@ -62,3 +62,7 @@
 #root > main > div.MuiContainer-root.MuiContainer-maxWidthMd > span.MuiBox-root.MuiBox-root-10.profile-info > div > div > div.MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-1.MuiGrid-item.MuiGrid-grid-md-true > button.MuiButtonBase-root.profile-image {
   margin: 10px;
 }
+
+.follow-button{
+  padding: 10px;
+}
